--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest"
+    "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "author": "Ravneet",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.2"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "jest": "^27.5.1",
